# cusas_app

./: .coverage  .dockerignore  .gitignore  README.md  conftest.py  docker-compose.yml  location.py  pyproject.toml  requirements.txt  site.py  web.config
.github/workflows/: release-branch-syn.yml  sync-requirements.yml
accounts/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_libraryadmin.py
assets/: CUSAS_Project_Document_final.docx  cusas_user_story.drawio  deployment.MD  software_requirment_specification.MD  ~$SAS_Project_Document_final.docx
configuration/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
configuration/xsettings/: base.py  dev.py  prod.py  test.py
cusas_app/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
cusas_app/migrations/: 0001_initial.py  0002_remove_probes_probes_sn_probes_probe_equip_no.py  0003_rename_cusas_app_m_locatio_a3edd0_idx_cusas_app_m_equip_l_c40961_idx_and_more.py  0004_alter_qaschedule_options_and_more.py  0005_machine_asset_id.py  0006_rename_asset_id_machine_equip_equipment_id.py  0007_rename_probe_equip_no_probes_equip_no_and_more.py  0008_standardschedule_locationqaschedule_and_more.py  0009_rename_intervals_days_locationqaschedule_interval_days_and_more.py  0014_rename_probes_to_prob.py  (+24 more)
deployment_resources/: httpPlatformHandler.web.config
docker/: local.Dockerfile
documentation/: GUI designs.xlsx  ~$GUI designs.xlsx
lib_resource/: python_ldap-3.4.4-cp313-cp313-win_amd64.whl  python_ldap-3.4.5-cp312-cp312-win_amd64.whl  python_ldap-3.4.5-cp314-cp314-win32.whl
library_app/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
mpce_services/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
templates/: 403.html  base.html  cusas_profile_update_modal.html  index.html  profile_edit_form.html  profile_row.html
(+67 files in other folders)
